<resources>
    <string name="app_name">Rocketio</string>
    <string name="title_activity_event">EventActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wildfires">Wildfires</string>
    <string name="show_more">Show more</string>
    <string name="categories">Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volcanos">Volcanos</string>
    <string name="mars">Mars</string>
    <string name="mars_icon">Mars Icon</string>
    <string name="volcano_icon">Volcano Icon</string>
    <string name="wildfire_icon">Wildfire icon</string>
    <string name="spaceship">Spaceship</string>
    <string name="image_of_day">Image of Day</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="take_picture">Take picture</string>
    <string name="sol">Sol</string>
    <string name="min_temperature">Min temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="go_home">Go home</string>
    <string name="retry">Retry</string>
    <string name="welcome_to_rocketio">Welcome to Rocketio</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="save_user">Save user</string>
    <string name="what_is_rocketio">What is Rocketio</string>
    <string name="about_description">Rocketio is a space app for everyone that interested in the galaxy. In the app you can find some interesting facts. Feel free to explore.</string>
    <string name="key_features">Key features</string>
    <string name="about_features_description">Main features you can find in menu is natural event tracker. Currently you can see live wildfires and volcanos. For events outside of earth visit Mars Weather that focuses on weather changes on Mars. Last feature is Image of the day with daily update of image and it\'s descriptions.</string>
</resources>