<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolcanosFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/volcano">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/volcanos"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/btnVolcano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/show_more" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/ivMarsIcon"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_marginTop="-20dp"
            android:src="@drawable/volcano_icon"
            android:contentDescription="@string/volcano_icon" />

    </RelativeLayout>

</FrameLayout>