<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:id="@+id/lyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >

            <!-- Wildfire -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/wildfires">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="25dp"
                        android:text="@string/wildfires"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btnWildfire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="@string/show_more" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/ivWildfireIcon"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="-20dp"
                    android:src="@drawable/wildfire_icon"
                    android:contentDescription="@string/wildfire_icon" />

            </RelativeLayout>

            <!-- Volcanos -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/volcano">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="25dp"
                        android:text="@string/volcanos"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:layout_alignParentRight="true"/>

                    <Button
                        android:id="@+id/btnVolcano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="@string/show_more" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/ivVolcanoIcon"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="-20dp"
                    android:src="@drawable/volcano_icon"
                    android:contentDescription="@string/volcano_icon" />

            </RelativeLayout>

            <!-- Mars -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/mars">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="25dp"
                        android:text="@string/mars"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btnMars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="@string/show_more" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/ivMarsIcon"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="-20dp"
                    android:src="@drawable/mars_icon"
                    android:contentDescription="@string/mars_icon" />

            </RelativeLayout>

            <!-- Image -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/space">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="25dp"
                        android:text="@string/image_of_day"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:layout_alignParentRight="true"/>

                    <Button
                        android:id="@+id/btnImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:background="#00000000"
                        android:padding="20dp"
                        android:text="@string/show_more" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/ivImageIcon"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="-20dp"
                    android:src="@drawable/spaceship"
                    android:contentDescription="@string/spaceship" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>